Fix broken mobile sizing due to rows without container and too large font

--- a/_includes/css/agency.css
+++ b/_includes/css/agency.css
@@ -337,7 +337,7 @@ section {
 section h2.section-heading {
     margin-top: 0;
     margin-bottom: 15px;
-    font-size: 40px;
+    font-size: 38px;
 }
 
 section h3.section-subheading {
@@ -890,13 +890,9 @@ body {
   padding: 0px 15px 20.5px;
 }
 
-.list-centered {
-  /* text-align:center; */
-  /* list-style-position: inside; */
-}
-
 ul.list-centered {
   padding-inline-start: 0px;
+  list-style-type: none;
 }
 
 .certifications {
